--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   <footer>
     <p>© 2025 Ferits</p>
     <div class="contact">
-      <a href="mailto:ferits@tuta.io" target="_blank">📧 Email</a>
-      <a href="https://discord.com/users/1127678527291007067" target="_blank">💬 Discord</a>
+      <a href="mailto:ferits@tuta.io" target="_blank">Email</a>
+      <a href="https://discord.com/users/1127678527291007067" target="_blank">Discord</a>
       <a href="https://f3rits.github.io">Home</a>
     </div>
   </footer>
