--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>67 Translate</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="icon.png" type="image">
+  <link rel="icon" href="icon.png" type="image/png">
 </head>
 
 <body>
